Fixed most of the bugs and re-organized functional code base